# VisionBasedManipulation

./: 2d_click.py  2d_to_3d_test.py  README.md  readme.md
grasp_vision/: package.xml  setup.cfg  setup.py
grasp_vision/grasp_vision/: extract_cluster.py
grasp_vision_cpp/: CMakeLists.txt  package.xml
grasp_vision_cpp/launch/: grasp.launch.py
grasp_vision_cpp/rviz/: vbm_visualize_drone.rviz
grasp_vision_cpp/src/: extract_cluster.cpp  optimal_grasp.cpp
pcl/: CMakeLists.txt  package.xml
pcl/src/: plane_segmentation.cpp  stitch_pointcloud.cpp  surface_normal.cpp
vbm_project_env/: CMakeLists.txt  package.xml
vbm_project_env/launch/: simulation.launch.py
vbm_project_env/rviz/: vbm.rviz  vbm_visualize.rviz  vbm_visualize_2.rviz  vbm_visualize_3.rviz
vbm_project_env/scripts/: move_camera.py
vbm_project_env/urdf/: camera.urdf
vbm_project_env/worlds/: simulation.world
